section padding fix on mobile

--- a/sass/_utils.scss
+++ b/sass/_utils.scss
@@ -7,3 +7,7 @@
 .section {
 	min-height: 85%;
 }
+
+.section.fullWidth {
+	padding: 3rem;
+}
